@@ -1217,3 +1217,8 @@ s/bu_free_array/bu_free_args/g
         fixed misleading name [7.26]
 s/(#[[:space:]]*include[[:space:]]+["<])bu\/rb\.h/\1bu\/redblack.h/g
 	clearer header name [7.26]
+s/rt_plot_vlblock/bn_plot_vlblock/g
+        move function to libbn [7.26]
+s/rt_vlist_to_uplot/bn_vlist_to_uplot/g
+        move function to libbn [7.26]
+
